# StrokeRiskSystem

./: CMakeLists.txt  DOCUMENTATION.md  Makefile  README.md  build.gradle  comparisonboarddialog.cpp  comparisonboarddialog.h  comparisonboarddialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pom.xml  predictiondialog.cpp  predictiondialog.h  predictiondialog.ui  run.bat  trainingdialog.cpp  trainingdialog.h  trainingdialog.ui
StrokeRiskSystem/: CMakeLists.txt  ComparisonBoardDialog.cpp  ComparisonBoardDialog.h  MainWindow.cpp  MainWindow.h  PredictionDialog.cpp  PredictionDialog.h  TrainingDialog.cpp  TrainingDialog.h  main.cpp
StrokeRiskSystem.dSYM/Contents/: Info.plist
StrokeRiskSystem.dSYM/Contents/Resources/DWARF/: StrokeRiskSystem
StrokeRiskSystem.dSYM/Contents/Resources/Relocations/aarch64/: StrokeRiskSystem.yml
StrokeRiskSystem/src/: ComparisonEngine.cpp  ComparisonEngine.h  DataProcessor.cpp  DataProcessor.h  DecisionTree.cpp  DecisionTree.h  RandomForest.cpp  RandomForest.h  StrokeRiskPredictor.cpp  StrokeRiskPredictor.h  UserProfile.cpp  UserProfile.h
data/: data.csv
include/: Comparison.h  KaggleData.h  RFClassifier.h  RandomForest.h  RandomForestUI.h  StrokeRiskPredictor.h  Tester.h  UserProfile.h
src/: Comparison.cpp  Comparison.h  Comparison.java  KaggleData.cpp  KaggleData.h  KaggleData.java  Main.java  RFClassifier.cpp  RandomForest.cpp  RandomForest.h  RandomForest.java  RandomForestUI.cpp  RandomForestUI.h  RandomForestUI.java  StrokeRiskGUI.java  StrokeRiskML.java  StrokeRiskPredictor.cpp  StrokeRiskPredictor.h  StrokeRiskPredictor.java  Tester.cpp  Tester.h  TreeNode.java  UserProfile.cpp  UserProfile.h  UserProfile.java  main.cpp
vscode/: DOCUMENTATION.md  Makefile  README.md  StrokeRiskSystem  build.gradle  pom.xml  run.bat
vscode/StrokeRiskSystem.dSYM/Contents/: Info.plist
vscode/StrokeRiskSystem.dSYM/Contents/Resources/DWARF/: StrokeRiskSystem
vscode/StrokeRiskSystem.dSYM/Contents/Resources/Relocations/aarch64/: StrokeRiskSystem.yml
vscode/data/: stroke_risk_dataset 3.csv
vscode/src/: Comparison.java  KaggleData.java  Main.java  RandomForest.java  RandomForestUI.java  StrokeRiskGUI.java  StrokeRiskML.java  StrokeRiskPredictor.java  TreeNode.java  UserProfile.java
